

#add_executable(test_vnoise test_vnoise.cpp )
#add_executable(test_spline test_spline.cpp )
#add_executable(test_clamp test_clamp.cpp )

#install( TARGETS test_vnoise DESTINATION bin/test_vnoise )
#install( TARGETS test_spline DESTINATION bin/test_spline )
#install( TARGETS test_clamp DESTINATION bin/test_clamp )

